# bnn_collision_checking

./: CMakeLists.txt  package.xml  readme.md
launch/: generate.launch
scripts/: dof3.pt  dof3pos.pt  dof3pos_2_layer.pt  dof3pos_2_layer_rel_loss.pt  dof3pos_single_layer.pt  dof3sphere.pt  dof3sphere_sat.pt  dof3sphere_shape2.pt  dof6pos_2_layer_rel_loss.pt  dof9.pt  dof9pos_2_layer_rel_loss.pt  dof9sphere.pt  entire_model.pt  read_collision_data.py
src/: compute_distance.cpp
